--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.7"
   }
 }
